# Mini-Articles-Posting-Platform-DRF

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  __init__.py  backend_test_task.md  commands.txt  docker-compose.yaml  pyproject.toml  requirements.txt
articles/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
blogPlatform/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
blogPlatform/articles/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
blogPlatform/blogPlatform/: settings.py  urls.py  wsgi.py
blogPlatform/comments/: managers.py  models.py
blogPlatform/common/: managers.py  models.py
blogPlatform/likes/: managers.py  models.py  serializers.py  urls.py  views.py
blogPlatform/users/: serializers.py  urls.py
comments/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py
common/: managers.py  models.py
likes/: managers.py  models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py
users/: permissions.py  urls.py  views.py
